# arrow-ipc-benchmarks

./: CMakeLists.txt  README.md  experiment.sh
inc/: client.h  store.h
lightning/: LICENSE
lightning/src/: client.cc  store.cc
python/: common.py  fs_sink.py  fs_source.py  socket_sink.py  socket_source.py
src/: client.cc  common.cpp  common.hpp  fs_sink.cpp  fs_source.cpp  inmemory_sink.cpp  inmemory_sink_lightning.cpp  inmemory_source.cpp  inmemory_source_lightning.cpp  memoryipc.hpp  socket_sink.cpp  socket_source.cpp  store.cc
